# plugin-localstore

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-python/: action.yml
.github/workflows/: codecov.yml  release.yml
nonebot_plugin_localstore/: __init__.py  config.py  data_source.py  script.py
tests/: conftest.py  test_get_plugin_dir.py  test_get_plugin_file.py  utils.py
tests/plugin/: __init__.py
tests/plugin/plugins/sub_plugin/: __init__.py
tests/spec_plugin/plugins/sub_plugin/: __init__.py
